# sprite-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/skills/analyze-image/: SKILL.md
.github/skills/analyze-mp4/: SKILL.md
.github/skills/analyze-video/: SKILL.md
.github/skills/crop-video/: SKILL.md
.github/skills/extract-image-layers/: SKILL.md
.github/skills/extract-mp4-frames/: SKILL.md
.github/skills/frames-to-mp4/: SKILL.md
.github/skills/frames-to-video/: SKILL.md
.github/skills/freeze-layer/: SKILL.md
.github/skills/gen-mp4/: SKILL.md
.github/skills/gen-video/: SKILL.md
.github/skills/image-to-layers/: SKILL.md
.github/skills/loop-video/: SKILL.md
.github/skills/merge-image/: SKILL.md
.github/skills/merge-video/: SKILL.md
.github/skills/mp4-to-frames/: SKILL.md
.github/skills/remix-animation/: SKILL.md
.github/skills/scale-image/: SKILL.md
.github/skills/smooth-video/: SKILL.md
.github/skills/split-image-layers/: SKILL.md
.github/skills/video-to-frames/: SKILL.md
.github/workflows/: ci.yml
tests/: test_analyze_image.py  test_analyze_mp4.py  test_analyze_video.py  test_extract_image_layers.py  test_extract_mp4_frames.py  test_frames_to_mp4.py  test_frames_to_video.py  test_gen_mp4.py  test_gen_video.py  test_image_to_layers.py  test_merge_image.py  test_mp4_to_frames.py  test_remix_animation.py  test_scale_image.py  test_split_image_layers.py  test_video_to_frames.py
tools/: analyze_image.py  analyze_mp4.py  analyze_video.py  crop_video.py  extract_image_layers.py  extract_mp4_frames.py  frames_to_mp4.py  frames_to_video.py  freeze_layer.py  gen_mp4.py  gen_video.py  image_to_layers.py  loop_video.py  merge_image.py  merge_video.py  mp4_to_frames.py  remix_animation.py  scale_image.py  smooth_video.py  split_image_layers.py  video_to_frames.py
tools/lib/: console.py  depth_utils.py  fill_utils.py  scale_utils.py  video_utils.py
