[project]
name = "sprite-forge"
version = "0.1.0"
description = "AI-powered toolkit for generating game assets from video and image sources."
authors = [
    { name = "Pantazis Deligiannis", email = "pdeligia@me.com" },
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.0.0",
    "diffusers>=0.30.0",
    "opencv-python>=4.13.0.92",
    "py-real-esrgan>=2.0.0",
    "rich>=14.0.0",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[project.scripts]
analyze-image = "tools.analyze_image:main"
analyze-mp4 = "tools.analyze_mp4:main"
extract-mp4-frames = "tools.extract_mp4_frames:main"
gen-mp4 = "tools.gen_mp4:main"
merge-image = "tools.merge_image:main"
scale-image = "tools.scale_image:main"
extract-image-layers = "tools.extract_image_layers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
