[project]
name = "sprite-forge"
version = "0.1.0"
description = "AI-powered toolkit for generating game assets from video and image sources."
authors = [
    { name = "Pantazis Deligiannis", email = "pdeligia@me.com" },
]
requires-python = ">=3.13"
dependencies = [
    "ccvfi>=0.0.3",
    "opencv-python>=4.13.0.92",
    "py-real-esrgan>=2.0.0",
    "rich>=14.0.0",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[project.scripts]
analyze-image = "tools.analyze_image:main"
analyze-video = "tools.analyze_video:main"
crop-video = "tools.crop_video:main"
frames-to-video = "tools.frames_to_video:main"
gen-video = "tools.gen_video:main"
image-to-layers = "tools.image_to_layers:main"
loop-video = "tools.loop_video:main"
merge-image = "tools.merge_image:main"
merge-video = "tools.merge_video:main"
remix-animation = "tools.remix_animation:main"
scale-image = "tools.scale_image:main"
smooth-video = "tools.smooth_video:main"
video-to-frames = "tools.video_to_frames:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
